creando las 6 actividades necesarias para las opos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
     <!-- Primera Seccion -->
     <section class="first-section">
         <div class="info">
-            <h4 class="heading-1">Rosanna Avila</h4>
+            <h4 class="heading-1">L'escola a casa</h4>
             <p id="mision" class="paragraph">
                 <i> <strong>Rosanna Avila</strong> es una aplicación que nace con la finalidad de
                     promover un aprendizaje constante y flexible, permitiendo
@@ -88,18 +88,18 @@
                     < /> 
                 </span>   -->
                 
-                <!-- <p class="paragraph-contact">
+                <p class="paragraph-contact">
                     Contacta con nosotros:
-                </p> -->
+                </p>
 
                 
-<!-- 
-                <p class="paragraph" id="linkedin"> -->
-                    <!-- <i>
-                       "La innovación distingue a los líderes de los seguidores" (Steve Jobs)
-                    </i>       -->
 
-                    <!-- <a class="li-ic" href="https://www.linkedin.com/in/angi-rubio/">
+                <p class="paragraph" id="linkedin">
+                    <i>
+                       "La innovación distingue a los líderes de los seguidores" (Steve Jobs)
+                    </i>      
+
+                    <a class="li-ic" href="https://www.linkedin.com/in/angi-rubio/">
                         <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
                       </a>        
                       <a class="li-ic" href="https://www.linkedin.com/in/felipe-bedoya-384542181/">
@@ -108,7 +108,7 @@
                       <a class="li-ic" href="https://www.linkedin.com/in/desir%C3%A9e-gamez-infantes-88a20248/">
                         <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
                       </a>   
-                </p>                 -->
+                </p>                
             </div>
             
             <div class="info-4__visual">
@@ -123,7 +123,16 @@
             
             <div class="info-2__visual">
                 <img #imageDesi src="../../../assets/images/image8.jpg" alt="imageBottom3">                
-            </div>    
+            </div>   
+            <div class="info-5__visual">
+                <img #imageNueva src="../../../assets/images/image7.jpg" alt="imageBottom3">                
+            </div>  
+            <div class="info-6__visual">
+                <img #imageNew src="../../../assets/images/image9.jpg" alt="imageBottom3">                
+            </div>  
+            <div class="info-8__visual">
+                <img #imageLast src="../../../assets/images/image4.jpg" alt="imageBottom3">                
+            </div>  
         </div>
     </section>    
   
