--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -88,33 +88,32 @@
                     < /> 
                 </span>   -->
                 
-                <p class="paragraph-contact">
-                    Contacta con nosotros:
+                <!-- <p class="paragraph-contact">
+                    Enlaces de interes:
                 </p>
 
                 
 
-                <p class="paragraph" id="linkedin">
-                    <i>
+                <p class="paragraph" id="linkedin"> -->
+                    <!-- <i>
                        "La innovación distingue a los líderes de los seguidores" (Steve Jobs)
-                    </i>      
+                    </i>       -->
 
-                    <a class="li-ic" href="https://www.linkedin.com/in/angi-rubio/">
+                    <!-- <a class="li-ic" href="#">
                         <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
                       </a>        
-                      <a class="li-ic" href="https://www.linkedin.com/in/felipe-bedoya-384542181/">
+                      <a class="li-ic" href="#">
                         <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
                       </a>    
-                      <a class="li-ic" href="https://www.linkedin.com/in/desir%C3%A9e-gamez-infantes-88a20248/">
+                      <a class="li-ic" href="#">
                         <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
                       </a>   
-                </p>                
+                </p>                 -->
             </div>
             
             <div class="info-4__visual">
                 <img #imageAngi src="../../../assets/images/image6.jpg" alt="imageBottom1">  
-                          
-            </div>
+            </div> 
 
             <div class="info-3__visual">
                 <img #imagePipe src="../../../assets/images/image7.jpg" alt="imageBottom2">   
@@ -125,13 +124,13 @@
                 <img #imageDesi src="../../../assets/images/image8.jpg" alt="imageBottom3">                
             </div>   
             <div class="info-5__visual">
-                <img #imageNueva src="../../../assets/images/image7.jpg" alt="imageBottom3">                
+                <img #imageNueva src="../../../assets/images/image7.jpg" alt="imageBottom4">                
             </div>  
             <div class="info-6__visual">
-                <img #imageNew src="../../../assets/images/image9.jpg" alt="imageBottom3">                
+                <img #imageNew src="../../../assets/images/image9.jpg" alt="imageBottom5">                
             </div>  
             <div class="info-8__visual">
-                <img #imageLast src="../../../assets/images/image4.jpg" alt="imageBottom3">                
+                <img #imageLast src="../../../assets/images/image4.jpg" alt="imageBottom6">                
             </div>  
         </div>
     </section>    
