primera parte funcionando

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -45,7 +45,7 @@
     <section class="second-section" #secondSection>
         <div class="box"></div>
         <h4 class="heading-4" id="about">Nuestra Filosofia</h4>
-        <h1 class="heading-1" id="buy">Todo bajo control</h1>
+        <h1 class="heading-1" id="buy">Aprender es lo principal</h1>
         <div class="info-1">
             <div class="info-1__text">
                 <span class="quote">
@@ -77,6 +77,8 @@
         <h1 class="heading-10" id="control">#Apasionados por el código</h1>
         <div class="info-10">
             <div class="info-10__text">
+
+                <app-footer></app-footer>
                 <!-- <span class="quote" id="principio">
                     < > 
                 </span> -->
@@ -87,50 +89,58 @@
                 <!-- <span class="quote" id="final">
                     < /> 
                 </span>   -->
-                
-                <!-- <p class="paragraph-contact">
-                    Enlaces de interes:
-                </p>
 
                 
 
-                <p class="paragraph" id="linkedin"> -->
-                    <!-- <i>
-                       "La innovación distingue a los líderes de los seguidores" (Steve Jobs)
-                    </i>       -->
+                <p class="paragraph" id="linkedin">
 
-                    <!-- <a class="li-ic" href="#">
-                        <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-                      </a>        
-                      <a class="li-ic" href="#">
-                        <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-                      </a>    
-                      <a class="li-ic" href="#">
-                        <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-                      </a>   
-                </p>                 -->
+                    <!-- Facebook -->
+                <a class="fb-ic">
+                    <!-- <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> -->
+                  </a>
+                  <!-- Twitter -->
+                  <a class="tw-ic">
+                    <!-- <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> -->
+                  </a>
+                  <!-- Google +-->
+                  <a class="gplus-ic">
+                    <!-- <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> -->
+                  </a>
+                  <!--Linkedin -->
+                  <a class="li-ic">
+                    <!-- <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> -->
+                  </a>
+                  <!--Instagram-->
+                  <a class="ins-ic">
+                    <!-- <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> -->
+                  </a>
+                  <!--Pinterest-->
+                  <a class="pin-ic">
+                    <!-- <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i> -->
+                  </a> 
+                </p>                
             </div>
             
             <div class="info-4__visual">
-                <img #imageAngi src="../../../assets/images/image6.jpg" alt="imageBottom1">  
+               <img #imageAngi src="../../../assets/images/image6.jpg" alt="imageBottom1" routerLink="/first">               
             </div> 
 
             <div class="info-3__visual">
-                <img #imagePipe src="../../../assets/images/image7.jpg" alt="imageBottom2">   
+                <img #imagePipe src="../../../assets/images/image7.jpg" alt="imageBottom2" routerLink="/second">   
                          
             </div>
             
             <div class="info-2__visual">
-                <img #imageDesi src="../../../assets/images/image8.jpg" alt="imageBottom3">                
+                <img #imageDesi src="../../../assets/images/image8.jpg" alt="imageBottom3" routerLink="/thirth">                
             </div>   
             <div class="info-5__visual">
-                <img #imageNueva src="../../../assets/images/image7.jpg" alt="imageBottom4">                
+                <img #imageNueva src="../../../assets/images/image7.jpg" alt="imageBottom4" routerLink="/fourth">                
             </div>  
             <div class="info-6__visual">
-                <img #imageNew src="../../../assets/images/image9.jpg" alt="imageBottom5">                
+                <img #imageNew src="../../../assets/images/image9.jpg" alt="imageBottom5" routerLink="/fifth">                
             </div>  
             <div class="info-8__visual">
-                <img #imageLast src="../../../assets/images/image4.jpg" alt="imageBottom6">                
+                <img #imageLast src="../../../assets/images/image4.jpg" alt="imageBottom6" routerLink="/sixth">                
             </div>  
         </div>
     </section>    
