--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -377,11 +377,13 @@
     }
     
     .info-10__text{
-        grid-row: 1 / -1;
-        grid-column: 1 / 5;
+        grid-row: 11 / 11;
+        grid-column: 3 / 8;
         display: grid;
         grid-template-rows: repeat(6, min-content);
-        grid-gap: 25px;
+        padding-top: 10%;
+        padding-bottom: 8%;
+        margin-right: 25%;
     }
     
     .info-10__visual{
@@ -504,14 +506,14 @@
         opacity: 0.7;
     } */
     
-    .info-10__text{
+    /* .info-10__text{
         grid-row: 10 / 11;
         grid-column: 1 / 8;
         display: grid;
         grid-template-rows: repeat(6, min-content);
         grid-gap: 25px;
         padding-right: 15%;
-    }
+    } */
     
     .info-1__visual{
         mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,1),rgba(0,0,0,0));
